Bug 685820 - Fix uint64/uint64_t usage breaking the build on OpenBSD/amd64; r=cjones